--- a/scavenger-wallet/package.json
+++ b/scavenger-wallet/package.json
@@ -6,7 +6,7 @@
     "@burner-wallet/assets": "^0.0.14",
     "@burner-wallet/core": "^0.0.13",
     "@burner-wallet/exchange": "^0.0.4",
-    "@burner-wallet/ui": "0.0.23",
+    "@burner-wallet/ui": "^0.0.24",
     "@types/jest": "24.0.13",
     "@types/node": "12.0.4",
     "@types/react": "16.8.19",
